plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '8.8.0'
}

group = 'com.realdev'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

def querydslVersion = '5.1.0'
def springCloudAwsVersion = '3.4.2'
ext['querydsl.version'] = querydslVersion

def querydslGeneratedDir = layout.buildDirectory.dir('generated/sources/annotationProcessor/java/main')

sourceSets {
	main {
		java {
			srcDir querydslGeneratedDir
		}
	}
}

dependencies {
	implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:${springCloudAwsVersion}")

	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
	implementation 'org.jsoup:jsoup:1.22.2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.17'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'

	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'

	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

	annotationProcessor 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.4.2'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:mysql'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}


tasks.withType(JavaCompile).configureEach {
	options.generatedSourceOutputDirectory = querydslGeneratedDir
}

spotless {
	java {
		target 'src/**/*.java'
		googleJavaFormat('1.28.0')
		removeUnusedImports()
		formatAnnotations()
		trimTrailingWhitespace()
		endWithNewline()
	}
	groovyGradle {
		target '*.gradle'
		trimTrailingWhitespace()
		endWithNewline()
	}
	format 'misc', {
		target '**/*.md', '**/*.yml', '**/*.yaml'
		targetExclude 'build/**', '.gradle/**', '.git/**'
		trimTrailingWhitespace()
		endWithNewline()
	}
}

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'live'
	}
	testLogging {
		showStandardStreams = true
	}
}

tasks.register('liveTest', Test) {
	group = 'verification'
	description = 'Runs live integration tests against the actual Claude API.'
	useJUnitPlatform {
		includeTags 'live'
	}
	testLogging {
		showStandardStreams = true
	}
}
